# q-snake

./: .gitignore  README.md  pyproject.toml
src/model/: conv.py
src/snake/: util.py
