[tool.poetry]
name = "q-snake"
version = "0.1.0"
description = ""
authors = ["jacob-papermill <jacob@papermill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
